--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,9 @@
 
 }
 
+/* Typography */
 html{
+     /* 62.5% of 16 px = 10px */
      font-size: 62.5%;
 }
 
@@ -53,5 +55,33 @@ p{
      }
      h3{
           font-size: 2.4rem;
+     }
+}
+
+/* link */
+a{
+     text-decoration: none;
+}
+
+.link-arrow {
+     color:var(--color-accent);
+     text-transform: uppercase;
+     font-size: 2rem;
+     font-weight: bold;
+}
+
+.link-arrow::after{
+     content: "-->";
+     margin-left: 5px;
+     transition: margin o.15s;
+}
+
+.link-arrow:hover::after {
+     margin-left: 10px;
+}
+
+@media screen and (min-width: 1024px) {
+     .link-arrow{
+          font-size: 1.5rem;
      }
 }
