--- a/CSS/style.css
+++ b/CSS/style.css
@@ -119,3 +119,30 @@ a{
      }
 }
 
+/* Lists */
+.list{
+     list-style: none;
+     padding-left: 0;
+     color: var(--color-headings);
+}
+
+.list--inline .list__item {
+     display: inline-block;
+     margin-right: 2rem;    
+}
+
+.list--tick {
+   list-style-image: url(../images/tick.svg);
+   padding-left: 3rem;
+}
+
+.list--tick .list__item {
+     padding-left: 0.5rem;
+     margin-bottom: 1rem;
+}
+
+@media screen and (min-widht:1024) {
+     .list--tick .list__item{
+          padding-left:0 ;
+     } 
+}
