--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,10 @@
 
 }
 
+*,*::after, *::before{
+ box-sizing: border-box;
+}
+
 /* Typography */
 html{
      /* 62.5% of 16 px = 10px */
@@ -164,6 +168,70 @@ a{
      border-radius: 100%;
      display: inline-flex;
      justify-content: center;
-     align-items: center;
-     
+     align-items: center;    
+}
+
+/* Buttons */
+.btn{
+     border-radius: 40px;
+     border: 0;
+     cursor: pointer;
+     font-size: 1.8rem;
+     font-weight: 600;
+     margin: 1rem 0;
+     padding: 2rem 3rem;
+     text-align: center;
+     text-transform: uppercase;
+     white-space: nowrap;
+}
+
+.btn--primary{
+     background: var(--color-primary);
+     color: #fff;
+}
+
+.btn--primary:hover {
+     background: #3a8ffd;
+}
+
+
+.btn--secondary{
+     background: var(--color-secondary);
+     color: #fff;
+}
+
+.btn--secondary:hover {
+     background: #00c8eb ;
+}
+
+.btn--accent{
+     background: var(--color-accent);
+     color: #fff;
+}
+
+.btn--accent:hover {
+     background: #ec3000;
+}
+
+.btn--block{
+     width: 100%;
+     display: inline-block;
+}
+
+.btn--outline{
+     background: #fff;
+     color:var(--color-headings);
+     border: 2px solid var(--color-headings);  
+}
+
+.btn--outline:hover {
+     background: var(--color-headings);
+     color: #fff;
+}
+
+
+@media screen  and (min-width: 1024){
+     .btn{
+          font-size:1.5rem ;
+     }
 }
