--- a/CSS/style.css
+++ b/CSS/style.css
@@ -273,3 +273,93 @@ a{
      }
 }
 
+/* Cards */
+
+.card {
+     border-radius: 7px;
+     box-shadow: 0 0 20px 10px #f3f3f3;
+     overflow: hidden;
+   }
+
+   .card__header, .card__body {
+     padding: 2rem 7%;
+     
+   }
+   
+   .card--primary .card__header {
+     background: var(--color-primary);
+     color: #fff;
+   }
+   
+   .card--secondary .card__header {
+     background: var(--color-secondary);
+     color: #fff;
+   }
+
+   /* Plans */
+
+.plan {
+     transition: transform 0.2s ease-out;
+   }
+
+.plan__name {
+     color: #fff;
+     margin: 0;
+     font-weight: 500;
+     font-size: 2.4rem;
+   }
+
+.plan__price {
+     font-size: 5rem;
+   }
+
+   .plan__billing-cycle {
+     font-size: 1.6rem;
+   }
+
+.plan__description{
+     font-size: 2rem;
+     font-weight: 300;
+     letter-spacing: 1px;
+     display: block;
+}
+
+.plan--popular .card__header::before{
+     content: url(../images/popular.svg);
+     width: 40px;
+     display: inline-block;
+     position: absolute;
+     top: -6px;
+     right: 5%;
+}
+
+.plan--popular .card__header {
+     position: relative;
+   }
+
+.plan:hover {
+     transform: scale(1.05);
+   }
+   
+.plan--popular:hover {
+     transform: scale(1.15);
+   }  
+
+@media screen and (min-width: 1024px) {
+     .plan--popular {
+       transform: scale(1.1);
+     }
+     .plan__name {
+       font-size: 1.4rem;
+     }
+     .plan__price {
+       font-size: 5rem;
+     }
+     .plan__billing-cycle {
+       font-size: 1.6rem;
+     }
+     .plan__description {
+       font-size: 1.7rem;
+     }
+   }
+
