--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,7 @@
      --color-accent:#ff3400;
      --color-headings: #1b0760;
      --color-body: #918ca4;
+     --color-body-darker: #5c5577;
      --color-border:#ccc;
 }
 
@@ -363,3 +364,70 @@ a{
      }
    }
 
+   /* Media */
+
+   .media{
+     display: flex;
+   }
+   
+   .media__title {
+     margin-top: 0;
+   }
+
+   .media__body {
+     margin: 0 2rem;
+   }
+
+   .media__image {
+     margin-top: 1rem ;
+   }
+
+   /* Quote */
+
+  .quote{
+     font-size: 3rem;
+     font-style: italic;
+     color: var(--color-body-darker);
+     line-height: 1.3;
+  }
+
+  .quote__text::before{
+     content: open-quote;
+  }
+
+  .quote__text::after{
+     content: close-quote;
+  }
+
+  .quote__author {
+      font-size: 3rem;
+      font-style: normal;
+      margin-bottom: 0;
+  }
+ 
+  .quote__company{
+     color: var(--color-headings);
+     opacity: 0.4;
+     font-size: 2rem;
+     font-style: normal;
+  }
+
+  .quote__line{
+     position: relative;
+     bottom: 10px;
+  }
+
+@media screen and (min-width) {
+     .quote{
+          font-size: 2rem;
+     }
+
+     .quote__author{
+          font-size: 2.4rem;
+     }
+
+     .quote__company{
+          font-size: 1.6rem;
+     }
+     
+}
