--- a/CSS/style.css
+++ b/CSS/style.css
@@ -159,8 +159,17 @@ a{
      height: 40px;
 }
 
+.icon--small{
+     width: 30px;
+     height: 30px;
+}
+
 .icon--primary{
      fill: var(--color-primary);
+}
+
+.icon--white{
+     fill: white;
 }
 
 .icon--container{
@@ -171,6 +180,10 @@ a{
      display: inline-flex;
      justify-content: center;
      align-items: center;    
+}
+
+.icon--container--accent{
+     background: var(--color-accent);
 }
 
 /* Buttons */
@@ -430,4 +443,53 @@ a{
           font-size: 1.6rem;
      }
      
+}
+
+/* Grids */
+
+.grid{
+     display: grid;
+}
+
+@media screen and (min-width: 768px){
+     .grid--1x2 {
+          grid-template-columns: repeat(2, 1fr);
+     }
+}
+
+@media screen and (min-width: 1024px){
+     .grid--1x3 {
+          grid-template-columns: repeat(3, 1fr);
+     }
+}
+
+/* Testimonial */
+
+.testimonial{
+     padding:3rem;
+}
+
+.testimonial__image{
+     position: relative;
+}
+
+.testimonial__image > img {
+   width: 100%;
+}
+
+.testimonial__image > .icon--container{
+     position: absolute;
+     top: 3rem;
+     right: -32px;
+}
+
+@media screen and (min-width:768px) {
+     .testimonial .quote, 
+     .testimonial .quote__author{
+          font-size: 2.4rem;
+     }
+
+     .testimonial .quote {
+          margin-left:6rem ;
+     }
 }
